--- a/出品プログラム/てらす/templates/index.html
+++ b/出品プログラム/てらす/templates/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    <form action="/edit" method="post" enctype="multipart/form-data">
-      Seed : <textarea name="seed" value="{{ seed }}" type="text">{{ seed }}</textarea>
-      <p><br /></p>
-      <button name="set_seed" autofocus="autofocus" type="submit" formmethod="post"　formnovalidate="formnovalidate">実行</button>
-    </form>
+    <form action="/edit" method="post" enctype="multipart/form-data"> Seed : <textarea
+name="seed" value="{{ seed }}" type="text" cols="100" rows="10">{{ seed }}</textarea>
+      <p><br>
+      </p>
+      <button name="set_seed" autofocus="autofocus" type="submit" formmethod="post"
+        　formnovalidate="formnovalidate">実行</button> </form>
   </body>
 </html>
