--- a/出品プログラム/てらす/templates/index.html
+++ b/出品プログラム/てらす/templates/index.html
@@ -3,13 +3,15 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    <form action="/edit" method="post" enctype="multipart/form-data"> Seed : <textarea
+    <form action="/edit" method="post" enctype="multipart/form-data"> Seed : <textarea
+
 name="seed" value="{{ dict01['seed'] }}" type="text" cols="100" rows="10">{{ dict01['seed'] }}</textarea><br>
       <br>
-      cood:<input name="code" value="&quot;&quot;" type="text"><br>
+      cood:<input name="code" value="{{ dict01['code'] }}" type="text"><br>
       <p><br>
       </p>
-      <button name="set_seed" autofocus="autofocus" type="submit" formmethod="post"
+      <button name="set_seed" autofocus="autofocus" type="submit" formmethod="post"
+
         　formnovalidate="formnovalidate">実行</button> </form>
   </body>
 </html>
